[project]
name = "claude-codebase-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.0",
    "pydantic-settings>=2.13.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "uvicorn>=0.41.0",
]
